# text2sql_deinxv2

./: .env.example  .gitignore  CLAUDE.md  DB_SCHEMA.md  GUIDE.md  README.md  prd.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
api/: index.py
core/api/: main.py
core/api/middleware/: auth.py  rate_limit.py
core/execution_layer/: runner.py  summarizer.py
core/generation_layer/: clause_builder.py  output_validator.py  sql_generator.py  value_extractor.py
core/models/: __init__.py  intent.py  query.py  result.py  sql.py
core/pipeline/: graph.py
core/retrieval_layer/: intent_classifier.py  query_planner.py  semantic_mapper.py  traversal.py
core/schema_layer/: extractor.py  graph_builder.py  graph_store.py
dataset/: README.md  academic_years.json  admission_applications.json  class_section_years.json  class_sections.json  classes.json  schools.json  staff.json  staff_certifications.json  staff_experience.json  staff_qualifications.json  student_addresses.json  subjects.json
db/: schema.sql  schema_index.json
debug/: index.html  server.py
edge/: package.json  wrangler.toml
edge/src/: index.ts
rag/: faq.jsonl  faq_index.json  indexer.py  interceptor.py  models.py  retriever.py
scripts/: build_faq_index.py  build_graph.py  seed_db.py  test_faq_sql.py
tests/integration/: test_api_routes.py  test_pipeline.py
tests/unit/: test_execution_layer.py  test_generation_layer.py  test_models.py  test_rag_indexer.py  test_rag_interceptor.py  test_rag_models.py  test_rag_retriever.py  test_retrieval_layer.py  test_schema_layer.py
(+7 files in other folders)
