[project]
name = "text-sql-v2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "litellm>=1.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "networkx>=3.3",
    "pydantic>=2.7",
    "botocore>=1.43.19",
    "rank_bm25>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "scripts", "debug", "api", "rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
